fixed scroll thumb on mobile breakpoints

--- a/pwa/src/styles/components/common/_categoryCard.scss
+++ b/pwa/src/styles/components/common/_categoryCard.scss
@@ -6,7 +6,7 @@
   width: calc(100vw);
   max-width: 1000px;
   max-height: calc(100vh - 50px);
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 60px 10px 10px 10px;
 }
 
