--- a/pwa/src/styles/components/common/_foodItem.scss
+++ b/pwa/src/styles/components/common/_foodItem.scss
@@ -6,7 +6,7 @@
   grid-gap: 15px;
   width: 100vw;
   max-height: calc(100vh - 50px);
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 60px 10px 10px 10px;
 }
 
